2010-11-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c:
	[ 3109469 ] Potential Buffer Overflow in msgqueue.c:localConnectServer()
	(patch by Josef Moellers)

2010-11-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3087577 ] Provider MI accessed before finished initializing

2010-11-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3097310 ] localConnect in cimcClientSfcbLocal.c accesses free'd memory

	* control.c, msgqueue.c, sfcb.cfg.pre.in:
	[ 3101154 ] Daemon clients failed SfcbLocal connect due to permission
	(patch by Chris Poblete)	

2010-11-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3101148 ] SfcbLocal method parameter type conversion and validation
	(patch by Chris Poblete)

	* providerDrv.c:
	[ 3101155 ] Failed to load provider libraries due to symbol conflicts
	(patch by Chris Poblete)

2010-10-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c:
	[ 3095884 ] Indication classes missing SystemName

2010-10-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* constClass.c:
	[ 3086143 ] set cmpi status in getPropQualifier
	(patch by Janny Au)
	
	* datetime.c:
	[ 3086145 ] check datetime format in chars2bin
	(patch by Janny Au)

2010-08-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* predicate.c:
	Pulled out 3051707 patch for the time being

	* interopProvider.c:
	[ 3053240 ] Leak on indication delivery

2010-08-23  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* predicate.c:
	[ 3051707 ] Leak in predicate.c

2010-08-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am:
	[ 3049645 ] SLP hostname lib won't build

	* objectImpl.c:
	[ 3035165 ] objectSize in objectImpl.c is not used thread safe
	(patch by Till Steinbach)

2010-08-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
	*  cimXmlRequest.c test/TestProviders/cmpiTestMethodProvider.c,
		test/schema/root/cimv2/Test_Method.mof 