@@ -11,6 +11,7 @@ Bugs fixed:
 - 3097310 localConnect in cimcClientSfcbLocal.c accesses free'd memory
 - 3087577 Provider MI accessed before finished initializing
 - 3109469 Potential Buffer Overflow in msgqueue.c:localConnectServer()
+- 3054618 mofpp is overaggressive when detecting comments
 
 Changes in 1.3.9
 ================
